# stors

./: .gitignore  Cargo.toml  LICENCE  README.md
stors-app/: Cargo.toml  README.md
stors-app/src/: main.rs
stors-core/: Cargo.toml
stors-core/diagrams/: item.mmd
stors-core/src/: item_impls.rs  lib.rs
stors-http/: Cargo.toml  README.md
stors-http/src/: app.rs  main.rs
