[package]
name    = "stors-http"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum               = { version = "0.7.5", default-features = false, features = ["form", "http2", "json", "tokio", "tracing"] }
color-eyre         = { version = "0.6.0", default-features = false, features = ["color-spantrace", "tracing-error"] }
dotenvy            = { version = "0.15.0", default-features = false }
http               = { version = "1.1.0", default-features = false, features = ["std"] }
leptos             = { version = "0.6.12", default-features = false, features = ["csr", "hydrate", "rustls", "serde", "ssr"] }
leptos_axum        = { version = "0.6.12", default-features = false }
leptos_meta        = { version = "0.6.12", default-features = false, features = ["csr", "hydrate", "ssr"] }
leptos_router      = { version = "0.6.12", default-features = false, features = ["csr", "hydrate", "ssr"] }
rand               = { version = "0.8.0", default-features = false, features = ["std", "getrandom"] }
serde              = { version = "1.0.0", default-features = false, features = ["std", "derive"] }
serde_json         = { version = "1.0.0", default-features = false, features = ["std"] }
thiserror          = { version = "1.0.61", default-features = false }
time               = { version = "0.3.34", default-features = false, features = ["std", "formatting", "parsing", "macros"] }
tokio              = { version = "1.34.0", default-features = false, features = ["fs", "macros", "net", "rt-multi-thread", "tracing"] }
tower              = { version = "0.4.13", default-features = false, features = ["log"] }
tower-http         = { version = "0.5.2", default-features = false, features = ["fs"] }
tracing            = { version = "0.1.0", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["std", "fmt", "thread_local", "tracing-log", "env-filter"] }
wasm-bindgen       = { version = "0.2.92", default-features = false, features = ["std", "spans"] }

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "stors"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

extra-targets = ["../README.md", "../stors-core/README.md"]
